[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "metabolinks"
dynamic = ["version"]
description = "A set of tools for high-resolution MS metabolomics data analysis"
readme = "README.rst"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    { name = "António Ferreira", email = "aeferreira@fc.ul.pt" },
]
keywords = [
    'Metabolomics', 
    'Mass Spectrometry', 
    'Data Analysis', 
    'Ultra-high resolution MS']
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Education',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Information Analysis"
]
dependencies = [
    'requests',
    'numpy', 
    'pandas>=0.25',
    'xlrd',
    'xlsxwriter',
    'pandas-flavor',
    'matplotlib>=2.0',
    "scipy",
    "scikit-learn>=1.0"
]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Homepage = 'https://github.com/aeferreira/metabolinks'
